Some updates lol

--- a/web/resources/style.css
+++ b/web/resources/style.css
@@ -56,3 +56,11 @@ and open the template in the editor.
        
       
 }       
+
+.isDisabled{
+        color: currentColor;
+        cursor: not-allowed;
+        opacity: 0.5;
+        text-decoration: none;
+        pointer-events: none
+    }
